--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
@@ -47,7 +47,7 @@
     defaultRotation: 90
     horizontalRotation: 90
   - type: Inventory
-    templateId: CP14mannequin
+    templateId: CP14Partial
   - type: InventorySlots
   - type: ContainerContainer
   - type: Fixtures
