--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
@@ -105,4 +105,4 @@
   - type: HumanoidAppearance
     species: CP14Zombie
   - type: Inventory
-    templateId: CP14mannequin
+    templateId: CP14Partial
