--- a/Resources/Prototypes/_CP14/Entities/Ritual/Graph/neutral_cluster.yml
+++ b/Resources/Prototypes/_CP14/Entities/Ritual/Graph/neutral_cluster.yml
@@ -12,44 +12,33 @@
   name: Neutral root node
   description: The perfect energetic position to begin any ritual.
   components:
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_00
-      message: "Calidum post meridiem"
-    - targetPhase: CP14_NeutralCluster_02
-      message: "Tenebris noctis"
-    - targetPhase: CP14_NeutralCluster_04
-      message: "Lunam pluvia"
-    - targetPhase: CP14_NeutralCluster_06
-      message: "Aurora mitis"
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14RitualEnd
-    time:
-      min: 200
-      max: 300
   - type: CP14MagicRitualPhase
     edges:
     - target: CP14_NeutralCluster_00
-    - target: CP14_NeutralCluster_02
-    - target: CP14_NeutralCluster_04
-    - target: CP14_NeutralCluster_06
+      triggers:
+      - !type:VoiceTrigger
+        message: "Calidum post meridiem"
+        
     - target: CP14RitualEnd
+      - !type:TimerTrigger
+        delay: 300
     
 - type: entity
   parent: CP14_NeutralCluster_Base
   id: CP14_NeutralCluster_00
   name: Neutral node 0
   components:
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_01
-      message: "Vespere nebula"
-    - targetPhase: CP14_NeutralCluster_08
-      message: "Ignis"
   - type: CP14MagicRitualPhase
     edges:
     - target: CP14_NeutralCluster_01
-    - target: CP14_NeutralCluster_08
+      triggers:
+      - !type:VoiceTrigger
+        message: "Vespere nebula"
+    
+    - target: CP14RitualEnd
+      triggers:
+      - !type:VoiceTrigger
+        message: "Ignis"
       requirements:
       - !type:RequiredResource
         vfx: CP14ImpactEffectCureWounds
@@ -65,320 +54,14 @@
   id: CP14_NeutralCluster_01
   name: Neutral node 1
   components:
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14_NeutralCluster_Root
-    time:
-      min: 5
-      max: 10
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_02
-      message: "De mente exstincta"
   - type: CP14MagicRitualPhase
     edges:
     - target: CP14_NeutralCluster_Root
-    - target: CP14_NeutralCluster_02
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_02
-  name: Neutral node 2
-  components:
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_03
-      message: "Nigrum nebula"
-    - targetPhase: CP14_NeutralCluster_10
-      message: "Nox"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_03
-    - target: CP14_NeutralCluster_10
-      requirements:
-      - !type:RequiredTime
-        timePeriod: Night
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_03
-  name: Neutral node 3
-  components:
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14_NeutralCluster_Root
-    time:
-      min: 5
-      max: 10
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_04
-      message: "Facile respicit"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_Root
-    - target: CP14_NeutralCluster_04
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_04
-  name: Neutral node 4
-  components:
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_05
-      message: "Palus crassus"
-    - targetPhase: CP14_NeutralCluster_12
-      message: "Aqua"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_05
-    - target: CP14_NeutralCluster_12
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_05
-  name: Neutral node 5
-  components:
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14_NeutralCluster_Root
-    time:
-      min: 5
-      max: 10
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_06
-      message: "Fireflies"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_Root
-    - target: CP14_NeutralCluster_06
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_06
-  name: Neutral node 6
-  components:
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_07
-      message: "Phosphorus"
-    - targetPhase: CP14_NeutralCluster_14
-      message: "Lux"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_07
-    - target: CP14_NeutralCluster_14
-      requirements:
-      - !type:RequiredResource
-        vfx: CP14ImpactEffectCureWounds
-        requiredEntities:
-          CP14SphereOfLight: 3
-      actions: 
-      - !type:ConsumeResource
-        requiredEntities:
-          CP14SphereOfLight: 3
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_07
-  name: Neutral node 7
-  components:
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14_NeutralCluster_Root
-    time:
-      min: 5
-      max: 10
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_00
-      message: "Pulvis"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_Root
-    - target: CP14_NeutralCluster_00
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_08
-  name: Neutral node 8
-  components:
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_15
-      message: "Magma candenti"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_15
-      requirements:
-      - !type:RequiredResource
-        vfx: CP14ImpactEffectCureWounds
-        requiredStacks:
-          CP14Dirt: 5
-      actions: 
-      - !type:ConsumeResource
-        requiredStacks:
-          CP14Dirt: 3
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_09
-  name: Neutral node 9
-  components:
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14_NeutralCluster_01
-    time:
-      min: 10
-      max: 15
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_08
-      message: "Incendio di cadavere"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_01
-    - target: CP14_NeutralCluster_08
-      requirements:
-      - !type:RequiredResource
-        vfx: CP14ImpactEffectCureWounds
-        requiredEntities:
-          CP14FlameCreationArtificialFlame: 3
-      actions: 
-      - !type:ConsumeResource
-        requiredEntities:
-          CP14FlameCreationArtificialFlame: 3
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_10
-  name: Neutral node 10
-  components:
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_09
-      message: "Absentis homines"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_09
-      requirements:
-      - !type:RequiredResource
-        vfx: CP14ImpactEffectCureWounds
-        requiredEntities:
-          CP14AgaricMushroom: 2
-      actions: 
-      - !type:ConsumeResource
-        requiredEntities:
-          CP14AgaricMushroom: 1
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_11
-  name: Neutral node 11
-  components:
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14_NeutralCluster_03
-    time:
-      min: 10
-      max: 15
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_10
-      message: "Et ducimus"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_03
-      actions:
-      - !type:AddOrb
-        orbs:
-          CP14RitualOrbCreation: 1
-    - target: CP14_NeutralCluster_10
-      requirements:
-      - !type:RequiredTime
-        timePeriod: Night
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_12
-  name: Neutral node 12
-  components:
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_11
-      message: "Cataractarum"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_11
- 
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_13
-  name: Neutral node 13
-  components:
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14_NeutralCluster_05
-    time:
-      min: 10
-      max: 15
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_12
-      message: "Lacus conversus viridi"
-    - targetPhase: CP14_HealCluster_Root
-      message: "Lets satus curatio"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_05
-    - target: CP14_NeutralCluster_12
-    - target: CP14_HealCluster_Root # To healing root!
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_14
-  name: Neutral node 14
-  components:
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_13
-      message: "Il miracolo della nascita"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_13
-      requirements:
-      - !type:RequiredResource
-        vfx: CP14ImpactEffectCureWounds
-        requiredEntities:
-          CP14WildSage: 2
-      actions: 
-      - !type:ConsumeResource
-        requiredEntities:
-          CP14WildSage: 1
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_15
-  name: Neutral node 15
-  components:
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14_NeutralCluster_07
-    time:
-      min: 10
-      max: 15
-  - type: CP14RitualTriggerVoice
-    triggers:
-    - targetPhase: CP14_NeutralCluster_14
-      message: "Scintillans crystallis"
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_07
-      actions:
-      - !type:AddOrb
-        orbs:
-          CP14RitualOrbDestruction: 1
-    - target: CP14_NeutralCluster_14
-      requirements:
-      - !type:RequiredResource
-        vfx: CP14ImpactEffectCureWounds
-        requiredEntities:
-          CP14SphereOfLight: 3
-      actions: 
-      - !type:ConsumeResource
-        requiredEntities:
-          CP14SphereOfLight: 3
+      triggers:
+      - !type:TimerTrigger
+        delay: 15
+    
+    - target: CP14RitualEnd
+      triggers:
+      - !type:VoiceTrigger
+        message: "De mente exstincta"
