--- a/Resources/Prototypes/_CP14/Entities/Ritual/Graph/neutral_cluster.yml
+++ b/Resources/Prototypes/_CP14/Entities/Ritual/Graph/neutral_cluster.yml
@@ -20,6 +20,7 @@
         message: "Calidum post meridiem"
         
     - target: CP14RitualEnd
+      triggers:
       - !type:TimerTrigger
         delay: 300
     
