--- a/Resources/Prototypes/_CP14/Entities/Ritual/Graph/neutral_cluster.yml
+++ b/Resources/Prototypes/_CP14/Entities/Ritual/Graph/neutral_cluster.yml
@@ -11,6 +11,7 @@
   id: CP14_NeutralCluster_Root
   name: Neutral root node
   description: The perfect energetic position to begin any ritual.
+  categories: [ HideSpawnMenu ]
   components:
   - type: CP14MagicRitualPhase
     edges:
@@ -28,6 +29,7 @@
   parent: CP14_NeutralCluster_Base
   id: CP14_NeutralCluster_00
   name: Neutral node 0
+  categories: [ HideSpawnMenu ]
   components:
   - type: CP14MagicRitualPhase
     edges:
@@ -54,6 +56,7 @@
   parent: CP14_NeutralCluster_Base
   id: CP14_NeutralCluster_01
   name: Neutral node 1
+  categories: [ HideSpawnMenu ]
   components:
   - type: CP14MagicRitualPhase
     edges:
