--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/bloodflower.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/bloodflower.yml
@@ -1,6 +1,8 @@
 # Idea:
 # BloodFlower is a special reagent that can yield different base reagents, depending on the type of blood it is mixed with.
 
+# Red color dye
+
 - type: reaction
   id: CP14BloodFlowerBrewing
   minTemp: 500
@@ -16,8 +18,28 @@
   - !type:CreateEntityReactionEffect
       entity: CP14DyeRed
 
+# Splitting
+
 - type: reaction
-  id: CP14BloodFlowerBrewingQuartz
+  id: CP14BloodFlowerSplitting
+  minTemp: 450
+  priority: 3
+  reactants:
+    CP14BasicEffectDamagePoison:
+      amount: 0.5
+    CP14BloodFlowerSap:
+      amount: 0.5
+  products:
+    CP14BasicEffectDamageBrute: 0.5
+  cp14RandomProducts:
+  - CP14BasicEffectRainbow: 0.5
+  - CP14BasicEffectDamageCold: 0.5
+  - CP14BasicEffectDrunk: 0.5
+
+#  Blood brewing
+
+- type: reaction
+  id: CP14BloodFlowerBrewingBloodHuman
   minTemp: 500
   priority: 2
   reactants:
