mana heal and damage reagent

--- a/Resources/Prototypes/_CP14/Procedural/biomes_template_grasslands.yml
+++ b/Resources/Prototypes/_CP14/Procedural/biomes_template_grasslands.yml
@@ -156,7 +156,7 @@
         - CP14FloraTreeLarge04
         - CP14FloraTreeLarge05
         - CP14FloraTreeLarge06
-    - !type:BiomeEntityLayer # Rare Bloodgrass
+    - !type:BiomeEntityLayer # Rare Bloodflower
       threshold: 0.7
       noise:
         seed: 3
