--- a/Resources/Prototypes/_CP14/Entities/Objects/Flora/wild.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Flora/wild.yml
@@ -1,8 +1,7 @@
 - type: entity
-  id: CP14BloodFlower
   parent: FoodProduceBase
-  name: blood rose
-  description: Scarlet flowers growing where blood has been spilled.
+  id: CP14WildProduceBase
+  abstract: true
   components:
   - type: Tag
     tags:
@@ -10,7 +9,13 @@
   - type: BadFood
   - type: Item
     size: Tiny
-  - type: Produce
+
+- type: entity
+  id: CP14BloodFlower
+  parent: CP14WildProduceBase
+  name: blood rose
+  description: Scarlet flowers growing where blood has been spilled.
+  components:
   - type: Sprite
     sprite: _CP14/Objects/Flora/Flowers/red_rose.rsi
     layers:
@@ -39,17 +44,10 @@
 
 - type: entity
   id: CP14AgaricMushroom
-  parent: FoodProduceBase
+  parent: CP14WildProduceBase
   name: fly agaric
   description: This poisonous mushroom can often be found near bodies of water or other wet areas. It is not recommended for consumption.
   components:
-  - type: Tag
-    tags:
-    - CP14FitInMortar
-  - type: BadFood
-  - type: Item
-    size: Tiny
-  - type: Produce
   - type: Sprite
     sprite: _CP14/Objects/Flora/Wild/agaric.rsi
     layers:
@@ -81,17 +79,10 @@
 
 - type: entity
   id: CP14ChromiumSlime
-  parent: FoodProduceBase
+  parent: CP14WildProduceBase
   name: chromium slime
   description: This rare thick substance can be found in a stream of water as if it has a mind of its own. When trying to change the slime itself - the slime changes the reagent it interacts with.
   components:
-  - type: Tag
-    tags:
-    - CP14FitInMortar
-  - type: BadFood
-  - type: Item
-    size: Tiny
-  - type: Produce
   - type: Sprite
     sprite: _CP14/Objects/Flora/Wild/chromium_slime.rsi
     layers:
@@ -121,18 +112,14 @@
 
 - type: entity
   id: CP14WildSage
-  parent: FoodProduceBase
+  parent: CP14WildProduceBase
   name: wild sage root
   description: Root of a ubiquitous medicinal plant, not bad at healing physical injuries, and inducing coughing.
   components:
-  - type: Tag
-    tags:
-    - CP14FitInMortar
   - type: Item
     size: Tiny
     shape:
     - 0,0,0,1
-  - type: Produce
   - type: Sprite
     sprite: _CP14/Objects/Flora/Wild/wild_sage.rsi
     layers:
@@ -166,11 +153,6 @@
   name: rough quartz
   description: a natural crystal that is a natural storage of magical energy. Its color reflects the quality of the crystal - the higher the emission spectrum, the higher the level of energy leakage.
   components:
-  - type: Tag
-    tags:
-    - CP14FitInMortar
-  - type: Item
-    size: Tiny
   - type: Sprite
     sprite: _CP14/Structures/crystal.rsi
     layers:
@@ -191,17 +173,10 @@
 
 - type: entity
   id: CP14LumiMushroom
-  parent: FoodProduceBase
+  parent: CP14WildProduceBase
   name: lumishroom
   description: A faintly luminous mushroom. Often used by alchemists as a means of concentrating solutions.
   components:
-  - type: Tag
-    tags:
-    - CP14FitInMortar
-  - type: BadFood
-  - type: Item
-    size: Tiny
-  - type: Produce
   - type: Sprite
     sprite: _CP14/Objects/Flora/Wild/lumishroom.rsi
     layers:
@@ -233,3 +208,33 @@
   - type: FoodSequenceElement
     entries:
       CP14Plate: CP14PlateLumiMushroom
+
+- type: entity
+  id: CP14BlueAmanita
+  parent: CP14WildProduceBase
+  name: blue Amanita
+  description: A sky blue flower known for its medicinal and magical properties.
+  components: 
+  - type: Sprite
+    sprite: _CP14/Objects/Flora/Wild/blue_amanita.rsi
+    layers:
+      - state: base1
+        map: ["random"]
+  - type: RandomSprite
+    available:
+    - random:
+        base1: ""
+        base2: ""
+  - type: Extractable
+    juiceSolution:
+      reagents:
+      - ReagentId: CP14BlueAmanita
+        Quantity: 4
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 5
+        reagents:
+        - ReagentId: CP14BlueAmanita
+          Quantity: 4
+  
