--- a/Resources/Prototypes/_CP14/Procedural/biomes_template_grasslands.yml
+++ b/Resources/Prototypes/_CP14/Procedural/biomes_template_grasslands.yml
@@ -101,24 +101,6 @@
     - !type:BiomeEntityLayer # flowers
       threshold: 0.7
       noise:
-        seed: 45
-        noiseType: OpenSimplex2
-        fractalType: Ridged
-        frequency: 0.035
-        octaves: 3
-        lacunarity: 1.8
-        gain: 0.7
-        domainWarpType: OpenSimplex2
-        domainWarpAmp: 120
-      allowedTiles:
-        - CP14FloorGrass
-        - CP14FloorGrassLight
-        - CP14FloorGrassTall
-      entities:
-        - CP14GatherableFlowersRed
-    - !type:BiomeEntityLayer # flowers
-      threshold: 0.7
-      noise:
         seed: 34
         noiseType: OpenSimplex2
         fractalType: Ridged
@@ -134,6 +116,24 @@
         - CP14FloorGrassTall
       entities:
         - CP14GatherableFlowersYellow
+    - !type:BiomeEntityLayer # BLue amanita
+      threshold: 0.7
+      noise:
+        seed: 67
+        noiseType: OpenSimplex2
+        fractalType: Ridged
+        frequency: 0.038
+        octaves: 3
+        lacunarity: 1.8
+        gain: 0.7
+        domainWarpType: OpenSimplex2
+        domainWarpAmp: 120
+      allowedTiles:
+        - CP14FloorGrass
+        - CP14FloorGrassLight
+        - CP14FloorGrassTall
+      entities:
+        - CP14GatherableBlueAmanita
     - !type:BiomeEntityLayer # Tall grass!
       threshold: 0.3
       noise:
@@ -159,6 +159,8 @@
         frequency: 2
       allowedTiles:
         - CP14FloorGrass
+        - CP14FloorGrassLight
+        - CP14FloorGrassTall
       entities: 
         - CP14FloraTree01
         - CP14FloraTree02
@@ -172,7 +174,7 @@
         - CP14FloraTreeLarge04
         - CP14FloraTreeLarge05
         - CP14FloraTreeLarge06
-    - !type:BiomeEntityLayer # Rare Bloodgrass
+    - !type:BiomeEntityLayer # Rare Bloodflower
       threshold: 0.7
       noise:
         seed: 3
@@ -186,8 +188,10 @@
         domainWarpAmp: 120
       allowedTiles:
         - CP14FloorGrass
+        - CP14FloorGrassLight
+        - CP14FloorGrassTall
       entities:
-        - CP14GatherableBloodgrass
+        - CP14GatherableBloodFlower
     - !type:BiomeEntityLayer # Rare Wild sage
       threshold: 0.6
       noise:
@@ -204,22 +208,6 @@
         - CP14FloorGrass
       entities:
         - CP14GatherableWildSage
-    - !type:BiomeEntityLayer # Mobs and aura
-      threshold: 0.8
-      noise:
-        seed: 8
-        noiseType: OpenSimplex2
-        fractalType: Ridged
-        frequency: 0.85
-        octaves: 3
-        lacunarity: 1.8
-        gain: 0.7
-        domainWarpType: OpenSimplex2
-        domainWarpAmp: 120
-      allowedTiles:
-        - CP14FloorGrass
-      entities:
-        - CP14AuraNodeBase
 
 # Подбиомы лугов
 
