--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/bloodflower.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/bloodflower.yml
@@ -1,14 +1,51 @@
 # Idea:
-# bloodgrass is a special reagent that can yield different base reagents, depending on the type of blood it is mixed with.
+# BloodFlower is a special reagent that can yield different base reagents, depending on the type of blood it is mixed with.
+
+# Red color dye
 
 - type: reaction
-  id: CP14BloodGrassBrewingBlood
+  id: CP14BloodFlowerBrewing
+  minTemp: 500
+  priority: 1
+  quantized: true
+  conserveEnergy: false
+  reactants:
+    CP14BloodFlowerSap:
+      amount: 10
+  effects:
+  - !type:CP14AffectSolutionTemperature
+    addTemperature: -250
+  - !type:CreateEntityReactionEffect
+      entity: CP14DyeRed
+
+# Splitting
+
+- type: reaction
+  id: CP14BloodFlowerSplitting
+  minTemp: 450
+  priority: 3
+  reactants:
+    CP14BasicEffectDamagePoison:
+      amount: 0.5
+    CP14BloodFlowerSap:
+      amount: 0.5
+  products:
+    CP14BasicEffectDamageBrute: 0.5
+  cp14RandomProducts:
+  - CP14BasicEffectRainbow: 0.5
+  - CP14BasicEffectDamageCold: 0.5
+  - CP14BasicEffectDrunk: 0.5
+
+#  Blood brewing
+
+- type: reaction
+  id: CP14BloodFlowerBrewingBloodHuman
   minTemp: 500
   priority: 2
   reactants:
     CP14Blood:
       amount: 0.5
-    CP14BloodGrassSap:
+    CP14BloodFlowerSap:
       amount: 0.5
     CP14GroundQuartz:
       amount: 0.5
@@ -21,13 +58,13 @@
     addTemperature: -250
 
 - type: reaction
-  id: CP14BloodGrassBrewingBloodTiefling
+  id: CP14BloodFlowerBrewingBloodTiefling
   minTemp: 500
   priority: 2
   reactants:
     CP14BloodTiefling:
       amount: 0.5
-    CP14BloodGrassSap:
+    CP14BloodFlowerSap:
       amount: 0.5
     CP14GroundQuartz:
       amount: 0.5
@@ -40,13 +77,13 @@
     addTemperature: -250
 
 - type: reaction
-  id: CP14BloodGrassBrewingBloodElf
+  id: CP14BloodFlowerBrewingBloodElf
   minTemp: 500
   priority: 2
   reactants:
     CP14BloodElf:
       amount: 0.5
-    CP14BloodGrassSap:
+    CP14BloodFlowerSap:
       amount: 0.5
     CP14GroundQuartz:
       amount: 0.5
@@ -59,13 +96,13 @@
     addTemperature: -250
 
 - type: reaction
-  id: CP14BloodGrassBrewingBloodGoblin
+  id: CP14BloodFlowerBrewingBloodGoblin
   minTemp: 500
   priority: 2
   reactants:
     CP14BloodGoblin:
       amount: 0.5
-    CP14BloodGrassSap:
+    CP14BloodFlowerSap:
       amount: 0.5
     CP14GroundQuartz:
       amount: 0.5
