redo triggers again

--- a/Resources/Prototypes/_CP14/Entities/Ritual/Graph/neutral_cluster.yml
+++ b/Resources/Prototypes/_CP14/Entities/Ritual/Graph/neutral_cluster.yml
@@ -5,6 +5,8 @@
   components:
   - type: CP14MagicRitualPhase
     phaseColor: "#FFFFFF"
+  - type: ActiveListener
+    range: 3
 
 - type: entity
   parent: CP14_NeutralCluster_Base
