--- a/Resources/Prototypes/_CP14/Entities/Ritual/Graph/neutral_cluster.yml
+++ b/Resources/Prototypes/_CP14/Entities/Ritual/Graph/neutral_cluster.yml
@@ -11,7 +11,7 @@
 - type: entity
   parent: CP14_NeutralCluster_Base
   id: CP14_NeutralCluster_Root
-  name: Neutral root node
+  name: Te-Se-Ra
   description: The perfect energetic position to begin any ritual.
   categories: [ HideSpawnMenu ]
   components:
@@ -19,55 +19,37 @@
     edges:
     - target: CP14_NeutralCluster_00
       triggers:
-      - !type:CP14VoiceTrigger
-        message: "Calidum post meridiem"
-        
-    - target: CP14RitualEnd
-      triggers:
-      - !type:CP14SacrificeSpeciesTrigger
-        species: CP14Goblin
+      - !type:CP14SacrificeWhitelistTrigger
+        whitelist:
+          components:
+          - MobState
+        whitelistDesc: cp14-ritual-category-all-living
     
 - type: entity
   parent: CP14_NeutralCluster_Base
   id: CP14_NeutralCluster_00
-  name: Neutral node 0
+  name: Li-Ra
   categories: [ HideSpawnMenu ]
   components:
   - type: CP14MagicRitualPhase
     edges:
-    - target: CP14_NeutralCluster_01
+    - target: CP14RitualEnd
       triggers:
       - !type:CP14VoiceTrigger
         message: "Vespere nebula"
-    
-    - target: CP14RitualEnd
-      triggers:
-      - !type:CP14VoiceTrigger
-        message: "Ignis"
-      requirements:
-      - !type:RequiredResource
-        vfx: CP14ImpactEffectCureWounds
-        requiredEntities:
-          CP14FlameCreationArtificialFlame: 3
       actions: 
-      - !type:ConsumeResource
-        requiredEntities:
-          CP14FlameCreationArtificialFlame: 3
-  
-- type: entity
-  parent: CP14_NeutralCluster_Base
-  id: CP14_NeutralCluster_01
-  name: Neutral node 1
-  categories: [ HideSpawnMenu ]
-  components:
-  - type: CP14MagicRitualPhase
-    edges:
-    - target: CP14_NeutralCluster_Root
-      triggers:
-      - !type:CP14TimerTrigger
-        delay: 15
-    
-    - target: CP14RitualEnd
-      triggers:
-      - !type:CP14VoiceTrigger
-        message: "De mente exstincta"
+      - !type:ApplyEntityEffect
+        maxEntities: 3
+        vfx: CP14ImpactEffectCureWounds
+        whitelist:
+          components:
+          - HumanoidAppearance
+        effects:
+          - !type:HealthChange
+            damage:
+              types:
+                Asphyxiation: -50
+                Bloodloss: -10
+          - !type:ModifyBleedAmount
+          - !type:ModifyBloodLevel
+          - !type:Jitter
