--- a/Resources/Prototypes/_CP14/Entities/Objects/ritual_describer.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ritual_describer.yml
@@ -19,3 +19,4 @@
       - state: detail_bookmark
         color: red
     - type: CP14PaperPhaseDescriber
+      startPhase: CP14_NeutralCluster_Root
