fix memory leaking  + hyperlinks

--- a/Resources/Prototypes/_CP14/Entities/Objects/ritual_describer.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ritual_describer.yml
@@ -20,3 +20,5 @@
         color: red
     - type: CP14PaperPhaseDescriber
       startPhase: CP14_NeutralCluster_Root
+      hyperlinks:
+      - CP14_NeutralCluster_Root
