--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/wallmount.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/wallmount.yml
@@ -11,6 +11,8 @@
   - type: Sprite
     drawdepth: Mobs
   - type: CP14Wallmount
+  - type: Physics
+    canCollide: false
 
 - type: entity
   id: CP14WallmountTorch
