--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
@@ -174,7 +174,7 @@
     messagePerceivedByOthers: hugging-success-generic-others
   - type: NpcFactionMember
     factions:
-    - NanoTrasen
+    - Expedition
   - type: Stripping
   - type: Strippable
   - type: UserInterface
