--- a/Resources/Prototypes/_CP14/Procedural/biome_template.yml
+++ b/Resources/Prototypes/_CP14/Procedural/biome_template.yml
@@ -118,7 +118,7 @@
         - CP14WallStone
     #Ores
     - !type:BiomeEntityLayer
-      threshold: 0.6
+      threshold: 0.7
       noise:
         seed: 10
         noiseType: OpenSimplex2
@@ -128,3 +128,25 @@
         - CP14FloorBase
       entities:
         - CP14WallStoneGoldOre
+    - !type:BiomeEntityLayer
+      threshold: 0.6
+      noise:
+        seed: 15
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        frequency: 3
+      allowedTiles:
+        - CP14FloorBase
+      entities:
+        - CP14WallStoneIronOre
+    - !type:BiomeEntityLayer
+      threshold: 0.5
+      noise:
+        seed: 20
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        frequency: 3
+      allowedTiles:
+        - CP14FloorBase
+      entities:
+        - CP14WallStoneCopperOre
