--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
@@ -144,3 +144,34 @@
       collection: CP14Sawing #TODO
     recipeTags:
     - CP14RecipeAnvil
+
+- type: entity
+  id: CP14WorkbenchFurnace
+  parent:
+  - CP14BaseWorkbench
+  name: melting furnace
+  description: I feel really bad, please someone fix this.
+  components:
+  - type: Sprite
+    state: furnace
+  - type: Icon
+    state: furnace
+  - type: Damageable
+    damageContainer: StructuralInorganic
+    damageModifierSet: StructuralMetallic
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 150
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: CP14Workbench
+    craftSound:
+      collection: CP14Sawing #TODO
+    recipeTags:
+    - CP14RecipeMeltingFurnace
