Revert "iron and copper ore walls + procedural cave update"
This reverts commit dc6d70b10e41dbe88461a7512c2c35ec40b14a82.

--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
@@ -105,6 +105,7 @@
   description: A table with embroidery tools to create different clothing and materials.
   components:
   - type: Sprite
+    snapCardinals: true
     state: sewing_table
   - type: Icon
     state: sewing_table
@@ -122,6 +123,7 @@
   description: "An ultimatum anvil that doesn't even need a hammer or red-hot ingot temperatures to forge tools. (OOC: we just haven't done it yet)"
   components:
   - type: Sprite
+    snapCardinals: true
     state: anvil
   - type: Icon
     state: anvil
