--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
@@ -120,7 +120,7 @@
   parent:
   - CP14BaseWorkbench
   name: anvil
-  description: "An ultimatum anvil that doesn't even need a hammer or red-hot ingot temperatures to forge tools. (OOC: we just haven't done it yet)"
+  description: An ultimatum anvil that doesn't even need a hammer or red-hot ingot temperatures to forge tools.
   components:
   - type: Sprite
     snapCardinals: true
