--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
@@ -119,7 +119,7 @@
   parent:
   - CP14BaseWorkbench
   name: anvil
-  description: An ultimatum anvil that doesn't even need a hammer or red-hot ingot temperatures to forge tools.
+  description: HUH
   components:
   - type: Sprite
     state: anvil
@@ -139,11 +139,11 @@
           collection: MetalBreak
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
-#  - type: CP14Workbench
-#    craftSound:
-#      collection: CP14Sawing #TODO
-#    recipeTags:
-#    - CP14RecipeAnvil
+  - type: CP14Workbench
+    craftSound:
+      collection: CP14Sawing #TODO
+    recipeTags:
+    - CP14RecipeAnvil
 
 - type: entity
   id: CP14WorkbenchFurnace
