--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
@@ -139,11 +139,11 @@
           collection: MetalBreak
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
-  - type: CP14Workbench
-    craftSound:
-      collection: CP14Sawing #TODO
-    recipeTags:
-    - CP14RecipeAnvil
+#  - type: CP14Workbench
+#    craftSound:
+#      collection: CP14Sawing #TODO
+#    recipeTags:
+#    - CP14RecipeAnvil
 
 - type: entity
   id: CP14WorkbenchFurnace
