--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
@@ -122,7 +122,7 @@
   description: I feel really bad, please someone fix this.
   components:
   - type: Sprite
-    state: furnace
+    state: anvil
 #  - type: Icon
 #    state: anvil
 #  - type: Damageable
