--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
@@ -123,22 +123,22 @@
   components:
   - type: Sprite
     state: anvil
-#  - type: Icon
-#    state: anvil
-#  - type: Damageable
-#    damageContainer: StructuralInorganic
-#    damageModifierSet: StructuralMetallic
-#  - type: Destructible
-#    thresholds:
-#    - trigger:
-#        !type:DamageTrigger
-#        damage: 250
-#      behaviors:
-#      - !type:PlaySoundBehavior
-#        sound:
-#          collection: MetalBreak
-#      - !type:DoActsBehavior
-#        acts: [ "Destruction" ]
+  - type: Icon
+    state: anvil
+  - type: Damageable
+    damageContainer: StructuralInorganic
+    damageModifierSet: StructuralMetallic
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 250
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
   - type: CP14Workbench
     craftSound:
       collection: CP14Sawing #TODO
