--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
@@ -105,7 +105,6 @@
   description: A table with embroidery tools to create different clothing and materials.
   components:
   - type: Sprite
-    snapCardinals: true
     state: sewing_table
   - type: Icon
     state: sewing_table
@@ -114,3 +113,65 @@
       collection: CP14Sawing #TODO
     recipeTags:
     - CP14RecipeSewing
+
+- type: entity
+  id: CP14WorkbenchAnvil
+  parent:
+  - CP14BaseWorkbench
+  name: anvil
+  description: I feel really bad, please someone fix this.
+  components:
+  - type: Sprite
+    state: anvil
+  - type: Icon
+    state: anvil
+  - type: Damageable
+    damageContainer: StructuralInorganic
+    damageModifierSet: StructuralMetallic
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 250
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: CP14Workbench
+    craftSound:
+      collection: CP14Sawing #TODO
+    recipeTags:
+    - CP14RecipeAnvil
+
+- type: entity
+  id: CP14WorkbenchFurnace
+  parent:
+  - CP14BaseWorkbench
+  name: melting furnace
+  description: I feel really bad, please someone fix this.
+  components:
+  - type: Sprite
+    state: furnace
+  - type: Icon
+    state: furnace
+  - type: Damageable
+    damageContainer: StructuralInorganic
+    damageModifierSet: StructuralMetallic
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 150
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: CP14Workbench
+    craftSound:
+      collection: CP14Sawing #TODO
+    recipeTags:
+    - CP14RecipeMeltingFurnace
