--- a/Resources/Prototypes/_CP14/Procedural/biome_template.yml
+++ b/Resources/Prototypes/_CP14/Procedural/biome_template.yml
@@ -28,30 +28,8 @@
       allowedTiles:
         - CP14FloorBase
       entities:
-        - FloraGreyStalagmite1
-        - FloraGreyStalagmite2
-        - FloraGreyStalagmite3
-        - FloraGreyStalagmite4
-        - FloraGreyStalagmite5
-        - FloraRockSolid01
-        - FloraRockSolid02
-        - FloraRockSolid03
-        - FloraGreyStalagmite1
-        - FloraGreyStalagmite2
-        - FloraGreyStalagmite3
-        - FloraGreyStalagmite4
-        - FloraGreyStalagmite5
-        - FloraRockSolid01
-        - FloraRockSolid02
-        - FloraRockSolid03
-        - FloraGreyStalagmite1
-        - FloraGreyStalagmite2
-        - FloraGreyStalagmite3
-        - FloraGreyStalagmite4
-        - FloraGreyStalagmite5
-        - FloraRockSolid01
-        - FloraRockSolid02
-        - FloraRockSolid03
+        - CP14RockSmall
+        - CP14RockSmall
         - CP14QuartzCrystal
     - !type:BiomeEntityLayer # lumishroom sage
       threshold: 0.6
@@ -118,7 +96,7 @@
         - CP14WallStone
     #Ores
     - !type:BiomeEntityLayer
-      threshold: 0.6
+      threshold: 0.7
       noise:
         seed: 10
         noiseType: OpenSimplex2
@@ -128,3 +106,25 @@
         - CP14FloorBase
       entities:
         - CP14WallStoneGoldOre
+    - !type:BiomeEntityLayer
+      threshold: 0.6
+      noise:
+        seed: 15
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        frequency: 3
+      allowedTiles:
+        - CP14FloorBase
+      entities:
+        - CP14WallStoneIronOre
+    - !type:BiomeEntityLayer
+      threshold: 0.5
+      noise:
+        seed: 20
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        frequency: 3
+      allowedTiles:
+        - CP14FloorBase
+      entities:
+        - CP14WallStoneCopperOre
