--- a/Resources/Prototypes/_CP14/Maps/debug.yml
+++ b/Resources/Prototypes/_CP14/Maps/debug.yml
@@ -32,3 +32,4 @@
           levels:
             -1:
               path: /Maps/_CP14/alchemy_test_layer2.yml
+        - type: CP14StationTravelingStoreshipTarget
