setup billboard timer

--- a/Resources/Prototypes/_CP14/Entities/Structures/test.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/test.yml
@@ -1,6 +1,8 @@
 - type: entity
   parent: BaseStructure
   id: CP14TravelingShop
+  name: city trading information board
+  description: Allows you to track what the city is selling and buying right now. 
   components:
   - type: Sprite
     snapCardinals: true
