move description too rigt part UI

--- a/Resources/Prototypes/_CP14/Store/buy.yml
+++ b/Resources/Prototypes/_CP14/Store/buy.yml
@@ -1,6 +1,10 @@
 - type: storePositionBuy
   id: TestStore1
   title: Ящик вооружения
+  flavorDesc: |
+      У вас что, закончилось оружие? НЕ БЕДА! 
+      Всего лишь за 50 золотых мы отправим вам 
+      кучу ржавого железа! Наслаждайтесь!
   icon: 
     sprite: _CP14/Objects/Materials/copper_ore.rsi
     state: ore1
@@ -27,20 +31,3 @@
     product:
       CP14OreCopper: 10
       CP14OreIron: 10
-
-##
-
-- type: storePositionSell
-  id: TestStoreSell
-  title: Поставка лазурной аманиты
-  icon: 
-    sprite: _CP14/Objects/Flora/Wild/blue_amanita.rsi
-    state: base1
-  price: 
-    min: 10
-    max: 10
-  service: !type:CP14SellWhitelistService
-    whitelist:
-      components:
-        - Extractable
-    count: 5
